<resources>
    <string name="app_name">Candiddly</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="username_or_email">Username or email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="send_verification_email">Send Verification Email</string>
    <string name="back">Back</string>
    <string name="new_password">New Password</string>
    <string name="password_hint">Password Hint</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="update_pass">Update Password</string>
    <string name="search_hint">Find friends</string>
    <string name="friends">Friends</string>
    <string name="username_colon">Username:</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="camera">Camera</string>
    <string name="save">Save</string>
    <string name="view_your_pictures">View Your Pictures</string>
    <string name="image_viewer">Image viewer</string>
    <string name="friend_s_username">Friend\'s Username…</string>
    <string name="add_friend">Add Friend</string>
    <string name="start_an_event">Start an event</string>
    <string name="i_am_the_host">I am the host</string>
    <string name="discover_my_friend">Discover my friend</string>
    <string name="you_will_be_taking_candids_of">Swipe down to refresh \n You will be taking candids of…</string>
    <string name="enter_username_of_each_group_member">Enter username of each group member</string>
    <string name="add">Add!</string>
    <string name="start">Start!</string>
    <string name="take_picture">Take Picture</string>
    <string name="who_do_you_want_to_send_to">Who do you want to send to?</string>
    <string name="connections">Connections</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="message">Message</string>
</resources>
